--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -6,7 +6,6 @@
     font-size: 0.8rem;
     color: var(--grey1);
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     gap: 0.5rem;
@@ -15,6 +14,7 @@
 .legal {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 0.5rem;
 }
 
@@ -42,4 +42,11 @@
 .socials img {
     width: 1.25rem;
     vertical-align: bottom;
+}
+
+@media screen and (max-width: 480px) {
+    .footer {
+        flex-direction: column-reverse;
+        gap: 1rem;
+    }
 }
