--- a/src/components/Menu.module.css
+++ b/src/components/Menu.module.css
@@ -24,6 +24,7 @@
     max-width: 100vw;
     border-left: 0.1rem solid var(--background_color3);
     background-color: var(--background_color1);
+    user-select: none;
     transition: all 0.3s;
 }
 
@@ -38,10 +39,19 @@
 }
 
 .menu_content>section>img {
-    width: 2.5rem;
-    cursor: pointer;
+    width: 2rem;
+    padding: 0.5rem;
     margin-left: auto;
     margin-right: 2vw;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: all 0.2s;
+}
+
+@media (hover: hover) {
+    .menu_content>section>img:hover {
+        background-color: var(--background_color2);
+    }
 }
 
 .menu_content nav {
@@ -56,47 +66,41 @@
 
 .menu_content li :where(a, span) {
     display: block;
-    font-size: 1.5rem;
-    font-weight: 500;
+    font-size: 1.25rem;
+    font-weight: normal;
     color: inherit;
-    padding: 1rem;
+    padding: 0.75rem;
     border-radius: 0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
     transition: all 0.2s;
 }
 
-.menu_content li :where(a, span):hover {
-    text-decoration: none;
-    background-color: var(--background_color2);
+@media (hover: hover) {
+    .menu_content li :where(a, span):hover {
+        text-decoration: none;
+        background-color: var(--background_color2);
+    }
 }
 
 .menu_content li img {
     width: 1.5rem;
     margin-left: 0.5rem;
     vertical-align: middle;
-    transition: all 0.3s;
-}
-
-.arrow_rotate {
-    transform: rotate(-180deg);
 }
 
 .nested_ul {
     visibility: hidden;
     opacity: 0;
     height: 0;
-    translate: 0 -1rem;
     padding-left: 1rem !important;
-    transition: all 0.1s;
+    transition: all 200ms;
 }
 
 .products_expand {
     visibility: visible;
     opacity: 1;
-    height: auto;
-    translate: 0;
-    transition: all 0.3s;
-}
-
-.nested_ul li a {
-    font-size: 1.25rem;
+    height: 3rem;
 }
