--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -1,5 +1,4 @@
 .modal {
-    opacity: 0;
     position: fixed;
     top: 0;
     left: 0;
@@ -7,6 +6,7 @@
     width: 100%;
     height: 100%;
     background-color: var(--background_color3_a50);
+    opacity: 0;
     transition: opacity .3s;
 }
 
@@ -20,11 +20,9 @@
     left: 50%;
     translate: -50% -50%;
     overflow: auto;
-    padding: 2.5rem;
-    box-sizing: border-box;
     border-radius: 1rem;
     background-color: var(--background_color1);
-    box-shadow: 0.2rem 0.4rem 2rem var(--grey1);
+    box-shadow: 0.2rem 0.4rem 2rem var(--grey4);
     scale: 0.9;
     transition: scale .4s;
 }
@@ -35,7 +33,14 @@
 
 .modal_content>img {
     position: absolute;
-    top: 0.75rem;
+    top: 1rem;
     right: 1rem;
     cursor: pointer;
+}
+
+.modal_content>div {
+    max-width: 90vw;
+    max-height: 80vh;
+    padding: 2rem;
+    box-sizing: border-box;
 }
